--- a/vercel.json
+++ b/vercel.json
@@ -5,12 +5,27 @@
       "src": "poll_app/wsgi.py",
       "use": "@vercel/python",
       "config": { "maxLambdaSize": "15mb", "runtime": "python3.9" }
+    },
+    {
+      "src": "build.sh",
+      "use": "@vercel/static-build",
+      "config": {
+        "distDir": "staticfiles"
+      }
     }
   ],
   "routes": [
     {
+      "src": "/static/(.*)",
+      "dest": "/staticfiles/$1"
+    },
+    {
       "src": "/(.*)",
       "dest": "poll_app/wsgi.py"
     }
-  ]
+  ],
+  "env": {
+    "SECRET_KEY": "123456789",
+    "DEBUG": "False"
+  }
 }
