--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.8.1
 Django==5.1.7
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.5.1
+django-cors-headers==4.3.1
 PyJWT==2.10.1
 python-dotenv==1.2.1
 sqlparse==0.5.3
