--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,20 @@
-asgiref==3.8.1
+# Django Framework
 Django==5.1.7
-djangorestframework==3.15.2
-djangorestframework-simplejwt==5.5.1
-django-cors-headers==4.3.1
-PyJWT==2.10.1
-python-dotenv==1.2.1
+asgiref==3.8.1
 sqlparse==0.5.3
 tzdata==2025.2
+
+# REST APIs
+djangorestframework==3.15.2
+djangorestframework-simplejwt==5.5.1
+PyJWT==2.10.1
+
+# CORS
+django-cors-headers==4.3.1
+
+# Env management
+python-dotenv==1.2.1
+
+# Deployment
+gunicorn
+whitenoise
